Fix problems fed back, Issue 76:	When displaying PDF or Flash content in MiniBrowser, "the height adjustment bar" hides behind PDF or Flash content.
git-svn-id: https://infoscoop.googlecode.com/svn/trunk@115 d4e23b88-c782-11de-b6dc-25c59a28ecba

--- a/src/main/web/skin/minibrowser.css
+++ b/src/main/web/skin/minibrowser.css
@@ -7,11 +7,14 @@
 	cursor: row-resize;
 	text-align: center;
 	background-color: #EEE;
-	border-top: 1px solid black;
 	_font-size: 0px;
-	top: 1px;
-	height: 2px;
+	padding-top: 1px;
+	height: 7px;
 	text-align: center;
+	overflow:hidden;
+}
+.infoScoop .handleSideBar {
+    border-top: 1px solid black;
 }
 .infoScoop .adjustMiniBrowserBarOver {
 }
